# ship_chart_material_design

./: .gitignore  app.py  pyproject.toml  scheme.sql
bp_auth/: auth.py
bp_offloads/: offloads.py
bp_ships/: ships.py
bp_staff/: staff.py
configs/: db_config.json
db/: create_account.py  dbcm.py
tests/: conftest.py
tests/ui/: test_auth.py
